[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "python-dotenv>=1.2.2",
    "nbconvert[webpdf]>=7.17.0",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "ipywidgets>=8.1.8",
    "langchain-core>=1.2.19",
    "nbformat>=5.10.4",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
